--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
@@ -3,7 +3,7 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Title = "ProgramEventRegistration";
 }
-
+@Html.Raw(TempData["msg"])
 <html>
 <head>
 	<meta charset="utf-8">
@@ -110,154 +110,158 @@
 		</div>
 		@using (Html.BeginForm("ProgramEventRegistration", "Account", FormMethod.Post))
 		{
-		@Html.AntiForgeryToken()
+			@Html.AntiForgeryToken()
 
-		<div class="row">
-			<div class="col-md-9">
-				<!--Accordion wrapper-->
-				<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-					<!-- Accordion card -->
-					
-					@{int i = 0;}
-					@foreach (var item in Model.uFamilyMembers)
-					{
-					<div class="card">
-						<div class="card-header" id="headingOne_@(i+1)" role="tab">
+			<div class="row">
+				<div class="col-md-9">
+					<!--Accordion wrapper-->
+					<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+						<!-- Accordion card -->
 
-							<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									@(item.FirstName + " " + item.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
+						@{int i = 0;}
+						@foreach (var item in Model.uFamilyMembers)
+						{
+							if (item.Events.Count() != 0)
+							{
+							<div class="card">
+								<div class="card-header" id="headingOne_@(i + 1)" role="tab">
 
-						<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
-							<div class="card-body">
-
-								<table class="table table-borderless">
-									<tbody>
-										@foreach (var ev in Model.Events)
-										{
-										<tr>
-											@*<td>@ev.Name<img id="EventTooltip" src="~/Content/img/info-icon.png" alt="" title="@ev.Description". /></td>*@
-											<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
-											<td>@ev.Weekday @ev.StartTime - @ev.EndTime</td>
-											<td>$@ev.Amount</td>
-											<td>
-												<label class="switch">
-													<input id="select_@(i+1)" value="@ev.Id _@item.Id" name="select" type="checkbox" checked="" />
-													@*@Html.HiddenFor(m => ev.select);*@
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-										}
-									</tbody>
-								</table>
-							</div>
-						</div>
-
-					</div>
-				i++;
-			}
-				</div>
-			</div>
-			<div class="col-md-3">
-				<button class="btn btn-orange mb-3" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Checkout</button><br>
-				<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Cancel</button>
-			</div>
-		</div>
-		@*<div class="row">
-			<div class="col-md-9">
-				<!--Accordion wrapper-->
-				<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-					<!-- Accordion card -->
-					@{int i = 0;}
-
-					<div class="card">
-						<!-- Card header -->
-						<div class="card-header" id="headingOne_0" role="tab">
-
-							<a aria-expanded="true" aria-controls="collapseOne_0" href="#collapseOne_0" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									@(ViewBag.obj.FirstName + " " + ViewBag.obj.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
-						<!-- Card body -->
-						<div class="collapse show" id="collapseOne_0" role="tabpanel" aria-labelledby="headingOne_0" data-parent="#accordionEx">
-							<div class="card-body">
-
-								<table class="table table-borderless">
-									<tbody>
-										@foreach (var ev in ViewBag.Events)
-										{
-											<tr>
-												<td>@ev.Name   </td>
-												<td>@ev.Weekday @ev.StartTime.ToString(@"hh\:mm") - @ev.EndTime.ToString(@"hh\:mm")</td>
-												<td>$@ev.Amount</td>
-												<td>
-													<label class="switch">
-														<input id="select_0" value="(@ev.Id)_select0" name="select" type="checkbox" checked="" />
-														<span class="slider round"></span>
-													</label>
-												</td>
-											</tr>
-										}
-									</tbody>
-								</table>
-							</div>
-						</div>
-
-					</div>
-
-					@foreach (var item in ViewBag.FamilyMember)
-					{
-						<div class="card">
-							<div class="card-header" id="headingOne_@(i+1)" role="tab">
-
-								<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
-									<h5 class="mb-0">
-										@(ViewBag.FamilyMember[i].FirstName + " " + ViewBag.FamilyMember[i].LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
-									</h5>
-								</a>
-							</div>
-
-							<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
-								<div class="card-body">
-
-									<table class="table table-borderless">
-										<tbody>
-											@foreach (var ev in ViewBag.Events)
-											{
-												<tr>
-													<td>@ev.Name   </td>
-													<td>@ev.Weekday</td>
-													<td>$@ev.Amount</td>
-													<td>
-														<label class="switch">
-															<input id="select_@(i+1)" value="(@ev.Id)_select@(i+1)" name="select" type="checkbox" checked="" />
-															<span class="slider round"></span>
-														</label>
-													</td>
-												</tr>
-											}
-										</tbody>
-									</table>
+									<a aria-expanded="true" aria-controls="collapseOne_@(i + 1)" href="#collapseOne_@(i + 1)" data-toggle="collapse" data-parent="#accordionEx">
+										<h5 class="mb-0">
+											@(item.FirstName + " " + item.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+										</h5>
+									</a>
 								</div>
-							</div>
 
-						</div>
-						i++;
-					}
+								<div class="collapse" id="collapseOne_@(i + 1)" role="tabpanel" aria-labelledby="headingOne_@(i + 1)" data-parent="#accordionEx">
+									<div class="card-body">
+
+										<table class="table table-borderless">
+											<tbody>
+												@foreach (var ev in item.Events)
+												{
+
+													<tr>
+														@*<td>@ev.Name<img id="EventTooltip" src="~/Content/img/info-icon.png" alt="" title="@ev.Description". /></td>*@
+														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
+														<td>@ev.Weekday @ev.StartTime - @ev.EndTime</td>
+														<td>$@ev.Amount</td>
+														<td>
+															<label class="switch">
+																<input id="select_@(i + 1)" value="@ev.Id _@item.Id" name="select" type="checkbox" checked="" />
+																@*@Html.HiddenFor(m => ev.select);*@
+																<span class="slider round"></span>
+															</label>
+														</td>
+													</tr>
+												}
+											</tbody>
+										</table>
+									</div>
+								</div>
+
+							</div>
+								i++;
+							}
+						}
+					</div>
+				</div>
+				<div class="col-md-3">
+					<button class="btn btn-orange mb-3" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Checkout</button><br>
+					<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Cancel</button>
 				</div>
 			</div>
-			<div class="col-md-3">
-				<button class="btn btn-orange mb-3" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Checkout</button><br>
-				<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Cancel</button>
-			</div>
-		</div>*@
-}
+			@*<div class="row">
+					<div class="col-md-9">
+						<!--Accordion wrapper-->
+						<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+							<!-- Accordion card -->
+							@{int i = 0;}
+
+							<div class="card">
+								<!-- Card header -->
+								<div class="card-header" id="headingOne_0" role="tab">
+
+									<a aria-expanded="true" aria-controls="collapseOne_0" href="#collapseOne_0" data-toggle="collapse" data-parent="#accordionEx">
+										<h5 class="mb-0">
+											@(ViewBag.obj.FirstName + " " + ViewBag.obj.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+										</h5>
+									</a>
+								</div>
+								<!-- Card body -->
+								<div class="collapse show" id="collapseOne_0" role="tabpanel" aria-labelledby="headingOne_0" data-parent="#accordionEx">
+									<div class="card-body">
+
+										<table class="table table-borderless">
+											<tbody>
+												@foreach (var ev in ViewBag.Events)
+												{
+													<tr>
+														<td>@ev.Name   </td>
+														<td>@ev.Weekday @ev.StartTime.ToString(@"hh\:mm") - @ev.EndTime.ToString(@"hh\:mm")</td>
+														<td>$@ev.Amount</td>
+														<td>
+															<label class="switch">
+																<input id="select_0" value="(@ev.Id)_select0" name="select" type="checkbox" checked="" />
+																<span class="slider round"></span>
+															</label>
+														</td>
+													</tr>
+												}
+											</tbody>
+										</table>
+									</div>
+								</div>
+
+							</div>
+
+							@foreach (var item in ViewBag.FamilyMember)
+							{
+								<div class="card">
+									<div class="card-header" id="headingOne_@(i+1)" role="tab">
+
+										<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
+											<h5 class="mb-0">
+												@(ViewBag.FamilyMember[i].FirstName + " " + ViewBag.FamilyMember[i].LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+											</h5>
+										</a>
+									</div>
+
+									<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
+										<div class="card-body">
+
+											<table class="table table-borderless">
+												<tbody>
+													@foreach (var ev in ViewBag.Events)
+													{
+														<tr>
+															<td>@ev.Name   </td>
+															<td>@ev.Weekday</td>
+															<td>$@ev.Amount</td>
+															<td>
+																<label class="switch">
+																	<input id="select_@(i+1)" value="(@ev.Id)_select@(i+1)" name="select" type="checkbox" checked="" />
+																	<span class="slider round"></span>
+																</label>
+															</td>
+														</tr>
+													}
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+								i++;
+							}
+						</div>
+					</div>
+					<div class="col-md-3">
+						<button class="btn btn-orange mb-3" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Checkout</button><br>
+						<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Cancel</button>
+					</div>
+				</div>*@
+		}
 	</div>
 
 
