--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ClassesConfirm.cshtml
@@ -135,7 +135,7 @@
 						<input class="form-check-input" id="termsandConditions" name="termsandConditions" type="checkbox">
 						<label class="form-check-label" for="termsandConditions">
 							I agree to the
-							<br>terms and conditions
+							<br><a href="#">terms and conditions</a>
 						</label>
 					</div>
 					<div class="form-group form-check">
