--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -108,7 +108,14 @@
 								<td>@(m.FirstName + " " + m.LastName)</td>
 								<td>@(m.DOB.ToString("MMM dd, yyyy"))</td>
 								<td>@m.Relationship</td>
-								<td>@m.Grade</td>
+								@if (@m.Grade != null)
+								{
+									<td>@m.Grade</td>
+								}
+								else
+								{
+									<td>-</td>
+								}
 								@if (@m.Relationship != "Self")
 								{
 								<td id="@m.Id" class="editFamilyMember"><a href="#" data-toggle="modal" data-target="#EditModal" class="Edit"><span class="label label-orange">Edit</span></a></td>
