--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Admin.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Admin.cshtml
@@ -67,7 +67,7 @@
 	<script>
 
 		$(document).ready(function () {
-			$("#programEventRegistration").hide();
+			//$("#programEventRegistration").hide();
 			$("#userList").show();
 			
 			function format(Id, tr, row) {
