--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
@@ -236,9 +236,9 @@
 		$("#current-Events").hide();
 		$("#userList").hide();
 		$('#collapseOne_1').removeClass('collapse').addClass('collapse show');
-		$(document).ready(function () {
+		//$(document).ready(function () {
 			$('[data-toggle="popover"]').popover();
-		});
+		//});
 	});
 </script>
 
