Added Update Functionality for Password, Phone, Email, Address

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -50,9 +50,9 @@
 					<a href="#"> Update Contact Info <span class="arrow"></span></a>
 				</li>
 				<ul class="sub-menu collapse" id="contact">
-					<li><a href="#"><img alt="" src="~/Content/img/phone.png"> Phone</a></li>
-					<li><a href="#"><img alt="" src="~/Content/img/email.png"> Email</a></li>
-					<li><a href="#"><img alt="" src="~/Content/img/address.png"> Address</a></li>
+					<li><a class="Phone" id="@User.Identity.Name" data-toggle="modal" data-target="#changePhone"><img alt="" src="~/Content/img/phone.png"> Phone</a></li>
+					<li><a class="Email" id="@User.Identity.Name" data-toggle="modal" data-target="#changeEmail"><img alt="" src="~/Content/img/email.png"> Email</a></li>
+					<li><a class="Address" id="@User.Identity.Name" data-toggle="modal" data-target="#changeAddress"><img alt="" src="~/Content/img/address.png"> Address</a></li>
 				</ul>
 
 				<li class="collapsed" aria-expanded="false" data-target="#payment" data-toggle="collapse">
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<!-- Modal Content starts -->
 	<div class="modal fade bd-example-modal-lg" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 
@@ -141,10 +141,26 @@
 		@Html.Partial("_ChangePassword", Model.updatePasswordModel)
 
 	</div>
+	<div class="modal fade bd-example-modal-lg" id="changePhone" tabindex="-1" role="dialog">
+
+		@Html.Partial("_ChangePhone", Model.updatePhone)
+
+	</div>
+	<div class="modal fade bd-example-modal-lg" id="changeEmail" tabindex="-1" role="dialog">
+
+		@Html.Partial("_ChangeEmail", Model.updateMailModel)
+
+	</div>
+
+	<div class="modal fade bd-example-modal-lg" id="changeAddress" tabindex="-1" role="dialog">
+
+		@Html.Partial("_ChangeAddress", Model.updateAddressModel)
+
+	</div>
 
 	<script>
 
-        $(document).ready(function () {
+		$(document).ready(function () {
 
 			$("#AddFamilyMember").on("click", function () {
 				$("#exampleModalCenter").load("/Account/RefreshFamilyMemberPartialView");
@@ -160,21 +176,55 @@
 			//	$("#changePassword").modal();
 			//});
 
-			$(".editFamilyMember").click(function () {
-			    var id = $(this).attr("id");
-			    $.ajax({
-			        "url": "../Account/EditFamilyMember/" + id,
-			        "type": "GET",
-			        success: function (data) {
-			            $("#exampleModalCenter").html(data);
-			            $("#exampleModalCenter").modal();
-			            DoTheCalculations();
-			        },
-
-			    });
-
+			$(".Phone").click(function () {
+				var Email = $(this).attr("id");
+				//alert(Email)
+				$.ajax({
+					"url": "../Account/EditPhoneNumber/?Email=" + Email,
+					"type": "GET",
+					success: function (data) {
+						$("#changePhone").html(data);
+						$("#changePhone").modal();
+					},
+				});
 			});
 
+			$(".Email").click(function () {
+				var Email = $(this).attr("id");
+				$.ajax({
+					"url": "../Account/EditEmail/?Email=" + Email,
+					"type": "GET",
+					success: function (data) {
+						$("#changeEmail").html(data);
+						$("#changeEmail").modal();
+					},
+				});
+			});
+
+			$(".Address").click(function () {
+				var Email = $(this).attr("id");
+				$.ajax({
+					"url": "../Account/EditAddress/?Email=" + Email,
+					"type": "GET",
+					success: function (data) {
+						$("#changeAddress").html(data);
+						$("#changeAddress").modal();
+					},
+				});
+			});
+
+			$(".editFamilyMember").click(function () {
+				var id = $(this).attr("id");
+				$.ajax({
+					"url": "../Account/EditFamilyMember/" + id,
+					"type": "GET",
+					success: function (data) {
+						$("#exampleModalCenter").html(data);
+						$("#exampleModalCenter").modal();
+						DoTheCalculations();
+					},
+				});
+			});
 		});
 
 		$(function () {
@@ -193,27 +243,27 @@
 		});
 
 		function DoTheCalculations() {
-		    var date = new Date($("#DateValue").val());
+			var date = new Date($("#DateValue").val());
 
-		    if ($("#DateValue").val() != null && $("#DateValue").val() != "") {
-		        calculateDate(date);
-		    }
+			if ($("#DateValue").val() != null && $("#DateValue").val() != "") {
+				calculateDate(date);
+			}
 		}
 
 		function toggleGradeEmail(state) {
-		    $("div#GradeSelectBox").toggle(state);
-		    $("div#EmailAddress").toggle(!state);
+			$("div#GradeSelectBox").toggle(state);
+			$("div#EmailAddress").toggle(!state);
 		}
 
 		function calculateDate(date) {
-		    var today = new Date();
-		    var age = Math.floor((today - date) / (365.25 * 24 * 60 * 60 * 1000));
-		    if (age >= 18) {
-		        toggleGradeEmail(false);
-		    }
-		    else {
-		        toggleGradeEmail(true);
-		    }
+			var today = new Date();
+			var age = Math.floor((today - date) / (365.25 * 24 * 60 * 60 * 1000));
+			if (age >= 18) {
+				toggleGradeEmail(false);
+			}
+			else {
+				toggleGradeEmail(true);
+			}
 		}
 
 	</script>
