Refactored the whole project structure

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Registration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/Registration.cshtml
@@ -11,4 +11,4 @@
 <div class="info_msg">
     Thank you for your interest in Chinmaya Mission! To participate in Chinmaya Mission classes and activities you must create an account. Membership is free and available to all. you may sign up individually or as a family. The whole family is encouraged to participate in Chinmaya Mission activities together.
 </div>
-<button class="btn btn-orange float-right" id="btnContinue" type="submit">@Html.ActionLink("Continue", "BindingDataPersonalDetails", "Account", new { area = "" }, new { @style = "color:white;" })<i class="material-icons">check_circle</i></button>
+<button class="btn btn-orange float-right" id="btnContinue" type="submit">@Html.ActionLink("Continue", "PersonalDetails", "Account", new { area = "" }, new { @style = "color:white;" })<i class="material-icons">check_circle</i></button>
