--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
@@ -21,17 +21,19 @@
 }
 	
 	@{
-		List<SelectListItem> listItems = new List<SelectListItem>();
-		listItems.Add(new SelectListItem
-		{
-			Text = "Individual Account",
-			Value = "1"
-		});
-		listItems.Add(new SelectListItem
-		{
-			Text = "Family Account",
-			Value = "0",
-		});
+        List<SelectListItem> listItems = new List<SelectListItem>();
+        List<SecurityQuestionsModel> sqmList = ViewBag.SecurityQuestions as List<SecurityQuestionsModel>;
+
+        listItems.Add(new SelectListItem
+        {
+            Text = "Individual Account",
+            Value = "1"
+        });
+        listItems.Add(new SelectListItem
+        {
+            Text = "Family Account",
+            Value = "0",
+        });
 
 	}
 
@@ -109,15 +111,15 @@
 							<div class="col-md-6 offset-md-3">
 								
 								@Html.LabelFor(m => m.SecurityQuestionsModel, new { @class = "requiredA" })
-								@for (var i = 0; i < Model.SecurityQuestionsModel.Count(); i++)
+								@for (var i = 0; i < sqmList.Count(); i++)
 								{
 							<div class="row">
 								<div id="dataListItem" class="col-md-8">
-									@Model.SecurityQuestionsModel[i].Id.
-									@Model.SecurityQuestionsModel[i].Name
+									@sqmList[i].Id.
+									@sqmList[i].Name
 								</div>
 								<div id="dataTextBox" class="col-md-4">
-                                    <input type='text' class="form-control" name="AnswerTextbox_@(i+1)" id="AnswerTextbox_@(i+1)" value="@Model.SecurityQuestionsModel[i].Value" />
+                                    <input type='text' class="form-control" name="AnswerTextbox_@(i+1)" id="AnswerTextbox_@(i+1)" value="@sqmList[i].Value" />
 								</div>
 							</div>
 								}
