--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Payment/PaymentMethod.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Payment/PaymentMethod.cshtml
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 		</div>
-		@using (Html.BeginForm("PaymentMethod", "Account", FormMethod.Post))
+		@using (Html.BeginForm("PaymentMethod", "Payment", FormMethod.Post))
 		{
 			@Html.AntiForgeryToken()
 			<div class="row">
@@ -87,29 +87,20 @@
 							<div class="col-md-3">
 
 								@Html.RadioButtonFor(m => m.paymentType, "Check", new { id = "CheckPaymentMethod" })<span> Check</span>
-								@*@Html.LabelFor(m => m.paymentType, "Check")*@
 							</div>
 							<div class="col-md-3">
 
 								@Html.RadioButtonFor(m => m.paymentType, "Credit Card", new { id = "CreditPaymentMethod" })<span> Credit Card</span>
-								@*@Html.LabelFor(m => m.paymentType, "Credit Card")*@
 							</div>
 						</div>
 						<div class="paymentMethodCheck" id="paymentMethodCheck">
 							<div class="row">
 								<div class="col-md-6">
-									@*<label>Account Holder Name</label>
-				<input class="form-control" type="password" placeholder="">*@
 									@Html.LabelFor(m => m.AccountHolderName)
 									@Html.TextBoxFor(m => m.AccountHolderName, new { @class = "form-control" })
 									@Html.ValidationMessageFor(m => m.AccountHolderName, "", new { @class = "text-danger" })
 								</div>
 								<div class="col-md-6">
-									@*<label>Account Type</label>
-				<select class="form-control">
-					<option></option>
-					<option></option>
-				</select>*@
 									@Html.LabelFor(m => m.AccountTypeId)
 									@Html.DropDownList("AccountTypeId", new SelectList(ViewBag.AccountType, "Id", "Name"), "Select", new { @class = "form-control" })
 									@Html.ValidationMessageFor(m => m.AccountTypeId, "", new { @class = "text-danger" })
@@ -117,15 +108,11 @@
 							</div>
 							<div class="row">
 								<div class="col-md-6">
-									@*<label>Bank name</label>
-				<input class="form-control" type="password" placeholder="">*@
 									@Html.LabelFor(m => m.BankName)
 									@Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
 									@Html.ValidationMessageFor(m => m.BankName, "", new { @class = "text-danger" })
 								</div>
 								<div class="col-md-6">
-									@*<label>Account Number</label>
-				<input class="form-control" type="password" placeholder="">*@
 									@Html.LabelFor(m => m.AccountNumber)
 									@Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
 									@Html.ValidationMessageFor(m => m.AccountNumber, "", new { @class = "text-danger" })
@@ -133,18 +120,11 @@
 							</div>
 							<div class="row">
 								<div class="col-md-6">
-									@*<label>Routing Number</label>
-				<input class="form-control" type="password" placeholder="">*@
 									@Html.LabelFor(m => m.RoutingNumber)
 									@Html.TextBoxFor(m => m.RoutingNumber, new { @class = "form-control" })
 									@Html.ValidationMessageFor(m => m.RoutingNumber, "", new { @class = "text-danger" })
 								</div>
 								<div class="col-md-6">
-									@*<label>Confirm Account Number</label>
-				<select class="form-control">
-					<option></option>
-					<option></option>
-				</select>*@
 									@Html.LabelFor(m => m.ConfirmAccountNumber)
 									@Html.TextBoxFor(m => m.ConfirmAccountNumber, new { @class = "form-control" })
 									@Html.ValidationMessageFor(m => m.ConfirmAccountNumber, "", new { @class = "text-danger" })
@@ -164,7 +144,6 @@
 		}
 	</div>
 	<!-- Latest compiled and minified JavaScript -->
-	@*<script src="~/Content/bootstrap.min.js"></script>*@
 	<script>
 		$(document).ready(function () {
 			$("#paymentMethodCheck").hide();
