--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -36,9 +36,9 @@
 							<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
 							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
 							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
-							<li class="nav-item"> @Html.ActionLink("Program/Event Registration", "ProgramEventRegistration", new { controller = "Account" }, new { @class = "nav-link", @id = "programEventRegistration" }) </li>
-							<li class="nav-item"> @Html.ActionLink("UserList", "Admin", new { controller = "Account" }, new { @class = "nav-link", @id = "userList" }) </li>
-							<li class="nav-item"> @Html.ActionLink("Current Events", "Event", new { controller = "Account" }, new { @class = "nav-link", @id = "current-Events" })</li>
+							<li class="nav-item"> @Html.ActionLink("Program/Event Registration", "ProgramEventRegistration", new { controller = "EventRegistration" }, new { @class = "nav-link", @id = "programEventRegistration" }) </li>
+							<li class="nav-item"> @Html.ActionLink("UserList", "Index", new { controller = "Admin" }, new { @class = "nav-link", @id = "userList" }) </li>
+							<li class="nav-item"> @Html.ActionLink("Current Events", "Event", new { controller = "Event" }, new { @class = "nav-link", @id = "current-Events" })</li>
 							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
 						</ul>
 						<div class="form-inline my-2 my-lg-0">
