--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
@@ -109,7 +109,7 @@
 														@*<td>@ev.Name</td>*@
 														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
 														<td>@ev.Weekday</td>
-														<td>$@ev.Amount</td>
+														<td>$@ev.ChangeAmount</td>
 														<td>
 															<label class="switch">
 																<input id="select_@(i + 1)" value="(@ev.Id)_select@(i + 1)" name="select" type="checkbox" checked="" />
