--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ProgramEventRegistration.cshtml
@@ -105,7 +105,7 @@
 													<tr>
 														<td><a href="#" data-toggle="popover" data-content="@ev.Description">@ev.Name</a></td>
 														<td>@ev.Weekday @ev.StartTime - @ev.EndTime</td>
-														<td>$@ev.Amount</td>
+														<td>$@ev.ChangeAmount</td>
 														<td>
 															<label class="switch">
 																<input id="select_@(i + 1)" value="@ev.Id _@item.Id" name="select" type="checkbox" checked="" />
